crates/action/tests/probes/derive_credential_on_wrong_type.stderr
error: field with `#[credential]` must have type `CredentialGuard<T>` (optionally wrapped in `Option<...>` and/or `Lazy<...>`) — got: u32
  --> tests/probes/derive_credential_on_wrong_type.rs:13:18
   |
13 |     not_a_guard: u32,
   |                  ^^^

error: cannot find attribute `credential` in this scope
  --> tests/probes/derive_credential_on_wrong_type.rs:12:7
   |
12 |     #[credential]
   |       ^^^^^^^^^^
   |
   = note: `credential` is an attribute that can be used by the derive macros `Credential` and `Resource`, you might be missing a `derive` attribute
